--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ script:
   - dir
   - choco install python3
   - python --version
+  - python -m pip install --upgrade pip
+  - PATH=/c/Python38:/c/Python38/Scripts:$PATH
+  - python program.py
